<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KeyChainDemo</string>
    <string name="cert_label">Certificate</string>
    <string name="private_key_label">Private Key</string>
    <string name="keychain_label">Key Chain Installation</string>
    <string name="keychain_install">Install</string>
    <string name="keychain_installed">Installed</string>
    <string name="server_label">Simple SSL Web Server</string>
    <string name="server_start">Start</string>
    <string name="server_stop">Stop</string>
    <string name="test_ssl">Test</string>
    <string name="ticker_text">Starting KeyChainDemo SSL Server</string>
    <string name="notification_title">KeyChainDemo SSL Server</string>
    <string name="notification_message">Click to stop the server</string>

</resources>